@@ -116,6 +116,27 @@
                 
                 <font>font13</font>
                 <align>left</align>
+                <label>script-NextAired-TVGuide2.xml</label>
+                <visible>Window.IsVisible(script-NextAired-TVGuide2.xml)</visible>
+            </control>
+            <control type="label">
+                <width>780</width>
+                <height>21</height>
+                <textcolor>FF0000FF</textcolor>
+                
+                <font>font13</font>
+                <align>left</align>
+                <label>script-NextAired-TVGuide.xml</label>
+                <visible>Window.IsVisible(script-NextAired-TVGuide.xml)</visible>
+            </control>
+
+            <control type="label">
+                <width>780</width>
+                <height>21</height>
+                <textcolor>FF0000FF</textcolor>
+                
+                <font>font13</font>
+                <align>left</align>
                 <label>MyMusicNav.xml</label>
                 <visible>Window.IsVisible(MyMusicNav.xml)</visible>
             </control>
