@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window>
+    <defaultcontrol always="true">5600</defaultcontrol>
+    <controls>
+        <include>Global_Background</include>
+        <include>Topbar</include>
+        <control type="group">
+            <visible allowhiddenfocus="true">!$EXP[Exp_ShowPlotOverlay]</visible>
+            <include>Animation_FadeInOut</include>
+            <include>View_Group</include>
+            <control type="grouplist" id="5600">
+                <left>-15</left>
+                <top>-20</top>
+                <right>-25</right>
+                <scrolltime tween="quadratic">400</scrolltime>
+                <height>view_height</height>
+                <orientation>vertical</orientation>
+                <itemgap>-52</itemgap>
+                <usecontrolcoords>true</usecontrolcoords>
+                <control type="group" id="5999"><height>0</height></control>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="200" />
+                    <param name="groupid" value="5200" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.200.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="201" />
+                    <param name="groupid" value="5201" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.201.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="202" />
+                    <param name="groupid" value="5202" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.202.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="203" />
+                    <param name="groupid" value="5203" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.203.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="204" />
+                    <param name="groupid" value="5204" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.204.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="205" />
+                    <param name="groupid" value="5205" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.205.Weekday)]" />
+                </include>
+                <include content="Object_NextAired_Template" description="Monday">
+                    <param name="id" value="206" />
+                    <param name="groupid" value="5206" />
+                    <param name="label" value="$INFO[Window(Home).Property(NextAired.206.Weekday)]" />
+                </include>
+            </control>
+        </control>
+    </controls>
+</window>
