@@ -1,6 +1,7 @@
 0.9.46
 - Add blur effect settings
 - Add Up Next support
+- Add Next Aired 7.0.1 support
 
 0.9.45
 - Updates to Sets info
